# my-cpu

./: .gitignore  CMakeLists.txt
.github/workflows/: main.yml
include/: defines.h  my_cpu.h  typedefs.h  utility.h
include/arithmetic_units/: 32_bit_adder.h  4_bit_adder.h  8_bit_adder.h  full_adder.h  half_adder.h
include/basic/: and.h  not.h  or.h
include/gates/: 32_and_32.h  32_mpx_32.h  32_mpx_4_32.h  32_not_32.h  32_or_32.h  and_4.h  dmpx.h  dmpx_16.h  dmpx_256.h  dmpx_4.h  dmpx_65kb.h  mpx.h  mpx_4.h  nor.h  or_16.h  or_32.h  or_4.h  or_8.h  xor.h
include/latches/: d_flip_flop.h  d_latch.h  resettable_d_flip_flop.h  sr_latch.h
include/units/: alu.h
src/: CMakeLists.txt  utility.c
src/arithmetic_units/: 32_bit_adder.c  4_bit_adder.c  8_bit_adder.c  CMakeLists.txt  full_adder.c  half_adder.c
test/: CMakeLists.txt
test/arithmetic_units/: 32_bit_adder_test.cpp  4_bit_adder_test.cpp  8_bit_adder_test.cpp  CMakeLists.txt  full_adder_test.cpp  half_adder_test.cpp
test/basic/: CMakeLists.txt  and_test.cpp  not_test.cpp  or_test.cpp
test/gates/: 32_and_32_test.cpp  32_mpx_32_test.cpp  32_mpx_4_32_test.cpp  32_not_32_test.cpp  32_or_32_test.cpp  CMakeLists.txt  and_4_test.cpp  dmpx_16_test.cpp  dmpx_256_test.cpp  dmpx_4_test.cpp  dmpx_65kb_test.cpp  dmpx_test.cpp  mpx_4_test.cpp  mpx_test.cpp  nor_test.cpp  or_16_test.cpp  or_32_test.cpp  or_4_test.cpp  or_8_test.cpp  xor_test.cpp
test/latches/: CMakeLists.txt  d_flip_flop_test.cpp  d_latch_test.cpp  resettable_d_flip_flop_test.cpp  sr_latch_test.cpp
test/units/: CMakeLists.txt  alu_test.cpp
(+31 files in other folders)
